Implement 4-bit RAM and RAM-mirroring for MBC2. No bus artefact values yet on the missing RAM bits, just 0xF

--- a/CoroGB.vcxproj
+++ b/CoroGB.vcxproj
@@ -121,6 +121,11 @@
       <FileType>Document</FileType>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md">
+      <ExcludedFromBuild>true</ExcludedFromBuild>
+    </None>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
