--- a/CoroGB.vcxproj.filters
+++ b/CoroGB.vcxproj.filters
@@ -81,4 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
